examples/test/testpolicy17327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17327
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key25: value7
      key28: value23
      key4: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value3
          key44: value18
      podSelector:
        matchLabels:
          key33: value22
